sPlash Compiler/tests/positive/P_example8.sp
a: Int =4;
b:Int=1;
if a > b {
     c:Int = a + b;
}

 