sPlash Compiler/tests/negative/N_example18.sp
a:Int = 3;
b:Int = 3;
if b < a {
    if a > b {
        return c;
        }
    }
